--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
   <div>
 
     <img src="https://www.onlytenis.com/blog/wp-content/uploads/2022/02/diferencias-entre-padel-y-tenis.jpg"
-      class="ImgHome" style="position: fixed center; margin-left: 15%">
+      class="ImgHome" style="position: fixed center;">
   </div>
 
   <hr class="hr">
