--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,7 +2,7 @@
 @model LoginModel
 
 @{
-  ViewData["Title"] = "";
+  ViewData["Title"] = "Iniciar Sesion";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -18,7 +18,7 @@
                 class="LTI-R">Registrarse</span></h6>
 
             @* Boton para dar vuelta la tarjeta *@
-            <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
+            <input class="checkbox" type="checkbox" id="reg-log" name="reg-log"></input>
             <label for="reg-log"></label>
 
             @* seccion iniciar sesion *@
@@ -38,7 +38,7 @@
                           autocomplete="off">
                         <i class="input-icon uil uil-lock-alt"></i>
                       </div>
-                      <a href="#" class="btn mt-4" id="btn_login">Iniciar sesión</a>
+                      <a href="#" class="btn mt-4" role="button" id="btn_login">Iniciar sesión</a>
                       <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Olvide mi contraseña</a></p>
                     </div>
                   </div>
@@ -63,7 +63,7 @@
                             id="logpass" autocomplete="off">
                           <i class="input-icon uil uil-lock-alt"></i>
                         </div>
-                        <a href="#" class="btn mt-4" id="btn_register">Registrarse</a>
+                        <a href="#" class="btn mt-4" role="button"  id="btn_register">Registrarse</a>
                       </div>
                     </div>
                   </div>
