--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
             <div class="container-fluid">
                 @* Propiedades del logo (Boton de "inicío/Home"). *@
                 <a class=" nav-link" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="css/img/APC.png" class="APC" alt="logo" width="150px">
+                    <img src="~/css/img/APC.png" class="APC" alt="logo" width="150px">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,7 @@
                             <a class="BTN nav-link" asp-area="" asp-controller="Usuario" asp-action="Index">Usuario</a>
                         </li>
                     </ul>
-                    <partial class="btn" name="_LoginPartial" />
+                    <partial name="_LoginPartial"/>
                 </div>
             </div>
         </nav>
