--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -7,8 +7,8 @@
 <div>
     <h1 class="display-4 titulo bajar">Crear Jugador</h1>
     <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-6 mx-auto">
+        <div class="col-lg-6">
+            <div class="col-md-12">
                 <p>Nombre</p>
                 <input type="text" class="from-control" id="Nombre" autocomplete="off">
                 <p>Apellido</p>
@@ -16,7 +16,7 @@
                 <p>Localidad</p>
                 <input type="text" class="from-control" id="Localidad" autocomplete="off">
             </div>
-            <div class="col-md-6 mx-auto">
+            <div class="col-md-12">
                 <p>Edad</p>
                 <input type="number" class="from-control" id="Edad" autocomplete="off">
                 <p>Telefono</p>
@@ -24,7 +24,7 @@
                 <p>DNI</p>
                 <input type="number" class="from-control" id="DNI" autocomplete="off">
             </div>
-            <div class="col-md-12">
+            <div class="col-lg-12 ">
                 <p>Categoria</p>
                 <input type="text" class="from-control" id="Categoria" autocomplete="off">
             </div>
