--- a/Views/Ranking/Index.cshtml
+++ b/Views/Ranking/Index.cshtml
@@ -1,30 +1,58 @@
-@model IEnumerable<TesisPadel.Models.Ranking>
+@model TesisPadel.Models.Ranking;
 @{
     ViewData["Title"] = "Ranking";
 }
 
-<body class="body5">
+@* modal *@
     <div class="modal fade" id="ModalRanking" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
-
+                <div class="modal-header fondom">
+                    <h5 class="modal-title letra " id="exampleModalLabel">Agregar Puesto</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div lass="modal-body fondom">
+                    <input type="hidden" id="RankingId" value="0" class="letra">
+                    <div class="control-label">
+                        <p class="letra">Nombre</p>
+                        <input type="text" class="form-control fondoi" id="Nombre" autocomplete="off">
+                        <p class="letra">Apellido</p>
+                        <input type="text" class="form-control fondoi" id="Apellido" autocomplete="off">
+                        <p class="letra">Club</p>
+                        <input type="text" class="form-control fondoi" id="Club" autocomplete="off">
+                        <p class="letra">Puntos</p>
+                        <input type="num" class="form-control fondoi" id="Nombre" autocomplete="off">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="button-8" role="button" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" onclick="GuardarRanking()" class="button-87" role="button">Guardar</button>
                 </div>
             </div>
         </div>
     </div>
-    <table class="table table-bordered table-striped table-condensed">
-            <thead>
-                <tr>
-                    <th>Nombre</th>
-                    <th>Club</th>
-                    <th>Puntos</th>
-                </tr>
-            </thead>
-            <tbody id="tbody-ranking">
-            </tbody>
-        </table>
-</body>
+    <h1></h1>
+    <div>
+        <div class="mb-2">
+            <button type="button" onclick="VaciarFormulario()" class="button-87" role="button" data-bs-toggle="modal"
+                data-bs-target="#ModalRanking">
+                Nuevo
+            </button>
+        </div>
+        <table class="table table-dark table-bordered table-striped">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Apellidos</th>
+                <th>Club</th>
+                <th>Puntos</th>
+            </tr>
+        </thead>
+        <tbody id="tbody-ranking">
+        </tbody>
+    </table>
+    </div>
+
 @section script{
     <script src="~/js/ranking-1.0.0.js"></script>
 }
