--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -54,7 +54,7 @@
 
   <hr class="hr">
 
-  <div class="sectionI1">
+  @* <div class="sectionI1">
     
     <div class="parrafo1">
       <h4 class="">Padel: El deporte que conquista corazones</h4>
@@ -62,9 +62,9 @@
     </div>
     <img src="https://www.radiosantvi.cat/images/pista-padel-al-aire-libre-raqueta-pelotas_362480-140.jpg" class="imgTexto1">
 
-  </div> 
+  </div>  *@
 
-  <div class="sectionI2">
+  @* <div class="sectionI2">
     
     <div class="parrafo2">
       <h4 class="">Aprende, mejora y comparte experiencias</h4>
@@ -72,62 +72,74 @@
     </div>
     <img src="https://www.radiosantvi.cat/images/pista-padel-al-aire-libre-raqueta-pelotas_362480-140.jpg" class="imgTexto2">
 
-  </div>  
+  </div>   *@
 
   <hr class="hr">
 
-  @* Seccion profesores *@
+  @* Seccion Clubes *@
  
   <div class="Profes row col-lg-12 col-md-9">
     <div class="card" style="width: 10rem;">
-     <a href="https://www.facebook.com/club.lapaquita"><img class="card-img-top" src="~/css/img/La-Paquita.png" alt="CardI image cap"></a> 
+     <a href="https://www.facebook.com/profile.php?id=100080628576874"><img class="card-img-top " src="~/css/img/paquita.png" alt="CardI image cap"></a> 
       <div class="card-body2">
         <h5 class="card-title">La Paquita</h5>
       </div>
     </div>
 
     <div class="card" style="width: 10rem;">
-    <a href="https://www.facebook.com/profile.php?id=100064522097167"><img class="card-img-top tamañoIc" src="~/css/img/chipion.png" alt="Card-image-cap"></a>  
+    <a href="https://www.facebook.com/profile.php?id=100064522097167"><img class="card-img-top" src="~/css/img/chipion_1.png" alt="Card-image-cap"></a>  
       <div class="card-body2">
         <h5 class="card-title">Chipion</h5>
       </div>
     </div>
 
     <div class="card" style="width: 10rem;">
-     <a href="https://www.facebook.com/clubcentrosocial"><img class="card-img-top" src="~/css/img/centro.png" alt="Card-image-cap"></a> 
+     <a href="https://www.facebook.com/clubcentrosocial"><img class="card-img-top" style="background-image: 20%;" src="~/css/img/centro.png" alt="Card-image-cap"></a> 
       <div class="card-body2">
         <h5 class="card-title">Centro</h5>
       </div>
     </div>
 
     <div class="card" style="width: 10rem;">
-     <a href="https://www.facebook.com/tiromorterosoficial"> <img class="card-img-top tamañoIt" src="~/css/img/tiro-de-morteros.png" alt="Card-image-cap"></a>
+    <a href="https://www.facebook.com/mundosanjorge/photos?locale=es_LA"><img class="card-img-top" src="~/css/img/san-jorge.png" alt="Card-image-cap"></a>  
+      <div class="card-body2">
+        <h5 class="card-title">San Jorge</h5>
+      </div>
+    </div>
+
+    <div class="card" style="width: 10rem;">
+     <a href="https://www.facebook.com/tiromorterosoficial"> <img class="card-img-top" src="~/css/img/tiro.png" alt="Card-image-cap"></a>
       <div class="card-body2">
         <h5 class="card-title">Tiro Federal</h5>
       </div>
     </div>
    
-    <div class="card" style="width: 10rem;">
+    <div class="card" style="width: 10rem; margin-top: 15px;">
     <a href="https://www.facebook.com/elnuevedemorteros"><img class="card-img-top" src="~/css/img/9-de-morteros.png" alt="Card-image-cap"></a>  
       <div class="card-body2">
         <h5 class="card-title">9 de morteros</h5>
       </div>
     </div>
     
-    <div class="card" style="width: 10rem;">
+    <div class="card" style="width: 10rem; margin-top: 15px">
     <a href="https://www.facebook.com/profile.php?id=100066839164805"><img class="card-img-top" src="~/css/img/suardi.png" alt="Card-image-cap"></a>  
       <div class="card-body2">
         <h5 class="card-title">Suardi</h5>
       </div>
     </div> 
    
-    <div class="card" style="width: 10rem; margin-top: 15px;">
+    <div class="card" style="width: 10rem; margin-top: 15px">
     <a href="https://www.facebook.com/clubatletico.libertadtrinidad.54"><img class="card-img-top" src="~/css/img/villa-trinidad.png" alt="Card-image-cap"></a>  
       <div class="card-body2">
         <h5 class="card-title">Villa Trinidad</h5>
       </div>
     </div>
-  
+  <div class="card" style="width: 10rem; margin-top: 15px">
+    <a href="https://www.facebook.com/portena.deportiva"><img class="card-img-top" src="~/css/img/porteña.png" alt="Card-image-cap"></a>  
+      <div class="card-body2">
+        <h5 class="card-title">Porteña</h5>
+      </div>
+    </div>
 
 
   <hr class="hr">
