--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,8 +25,8 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="BTN nav-link" asp-area="" asp-controller="Ranking" asp-action="Index">Ranking</a>
-                        </li>
+                            <a class="BTN nav-link" asp-area="" asp-controller="Ranking" asp-action="Index">Posiciones</a>
+                        </li> 
                         <li class="nav-item">
                             <a class="BTN nav-link" asp-area="" asp-controller="Club" asp-action="Index">Clubes</a>
                         </li>
