--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -17,7 +17,7 @@
 else
 {
     <li class="nav-item">
-        <a class="link BTN" asp-area="Identity" style="text-decoration: none;" asp-page="/Account/Login">¿eres Jugador?</a>
+        <a class="link BTN" asp-area="Identity" style="text-decoration: none;" asp-page="/Account/Login">iniciar sesión</a>
     </li>
 }
 </ul>
