--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,13 +14,13 @@
   <div>
 
     <img src="https://www.onlytenis.com/blog/wp-content/uploads/2022/02/diferencias-entre-padel-y-tenis.jpg"
-      class="ImgHome" style="position: fixed center;">
+      class="ImgHome" style="position: fixed center; margin-left: 4%">
   </div>
 
   <hr class="hr">
 
   <div style="text-align: center;">
-    <h2>El padel se apodera de tu vida, ¡prepárate para la diversión!</h2>
+    <h2 class="titulo">El padel se apodera de tu vida, ¡prepárate para la diversión!</h2>
   </div>
 
 
@@ -52,7 +52,6 @@
 
   </div>
 
-  <hr class="hr">
 
   @* <div class="sectionI1">
     
@@ -77,6 +76,7 @@
   <hr class="hr">
 
   @* Seccion Clubes *@
+  <h2 class="display-4 titulo">Sigue a los Clubes que conforman a <b>APC</b></h2>
  
   <div class="Profes row col-lg-12 col-md-9">
     <div class="card" style="width: 10rem;">
@@ -146,7 +146,7 @@
 
 
   @* SECCION PREGUNTAS FRECUENTES *@
-  <h1 class="preguntas">Preguntas frecuentes</h1>
+  <h1 class="preguntas titulo">Preguntas frecuentes</h1>
 
   <div class="row">
     <div class="Card col-lg-5">
