--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -5,27 +5,56 @@
 }
 
 <div>
-    <h1 class="display-4 titulo bajar">Crear Jugador</h1>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="col-md-6">
+    <h1 class="display-4 titulo bajar">Complete sus datos</h1>
+
+    <div style="margin-left: 5%;">
+        <div class="row">
+            <div class="col-md-6 ">
                 <p>Nombre</p>
-                <input type="text" class="from-control" id="Nombre" autocomplete="off">
+                <input type="text" style="width : 450px; heigth : 400px class=" from-control" id="Nombre"
+                    autocomplete="off">
+            </div>
+            <div class="col-md-4 ">
                 <p>Localidad</p>
-                <input type="text" class="from-control" id="Localidad" autocomplete="off">
+                <input type="text" style="width : 450px; heigth : 400px class=" from-control" id="Localidad"
+                    autocomplete="off">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 ">
                 <p>Edad</p>
-                <input type="number" class="from-control" id="Edad" autocomplete="off">
+                <input type="number" style="width : 450px; heigth : 400px class=" from-control" id="Edad"
+                    autocomplete="off">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <p>Telefono</p>
-                <input type="number" class="from-control" id="Telefono" autocomplete="off">
-                <p>DNI</p>
-                <input type="number" class="from-control" id="DNI" autocomplete="off">
-                <p>Categoria</p>
-                <input type="text" class="from-control" id="Categoria" autocomplete="off">
+                <input type="number" style="width : 450px; heigth : 400px class=" from-control" id="Telefono"
+                    autocomplete="off">
             </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col-md-6">
+                <p>DNI</p>
+                <input style="width : 450px; heigth : 400px" type="number" class="from-control" id="DNI"
+                    autocomplete="off">
+            </div>
+            <div class="col-md-4">
+                <p>Genero</p>
+               <select name="Genero" id="Genero" style="width : 450px; height: 45%;">
+                <option value=""></option>
+                <option value="1"> Masculino</option>
+                <option value="2">Femenino</option>
+               </select>
         </div>
     </div>
 </div>
-<button type="button" class="button-87" role="button">Crear</button>
+
 </div>
+<button style="margin-left: 44%;" type="button" onclick="GuardarUsuario()" class="button-87"
+    role="button">Guardar</button>
+</div>
+@section Scripts{
+    <script src="~/js/usuario-1.0.0.js"></script>
+}
