--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -26,6 +26,11 @@ html {
   background-attachment: fixed;
   overflow-x: hidden;
   background-color: #000000;
+  background-image: url(../css/img/FondoPadel2.jpg);
+  max-width: 100% ;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .rankingC {
@@ -40,13 +45,17 @@ html {
 }
 
 .HTitulo {
-  color: #ffeba7;
+  color: #080bf3;
   font-size: 3em;
   padding-top: 0.2em;
   margin-bottom: 2rem;
   text-shadow: 2px 4px 1px rgb(67, 53, 9);
 }
-
+.titulo
+{
+  color:#000000 !important;
+  font-family: Verdana;
+}
 */
 
 /* Barra nvar */
@@ -118,6 +127,7 @@ body {
   line-height: 1.7;
   color: #c4c3ca;
   background-color: #0b445a;
+ 
 }
 
 .LTI-R {
@@ -544,6 +554,7 @@ img {
   margin-top: 3rem;
   font-family: 'Asap', 'Poppins', sans-serif;
   text-shadow: #000 0 0 10px;
+  
 }
 
 .container {
@@ -755,10 +766,10 @@ img {
 
 
 .card-img-top {
-  max-height: 100%;
-  width: auto;
-  border-radius: 100%;
-  border: 3px solid black;
+  max-height: 100% !important;
+  width: auto !important;
+  border-radius: 100% !important;
+  border: 3px solid black !important;
 }
 
 /* fin */
@@ -1032,4 +1043,7 @@ img {
 .card-image{
 max-width: 100%;
 height:auto ;
+}
+.FondoL{
+  
 }
