Login/register listo

--- a/Views/Ranking/Index.cshtml
+++ b/Views/Ranking/Index.cshtml
@@ -11,24 +11,24 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body fondom">
-                <input type="hidden" id="RankingId" value="0" class="letra">
-                <div class="control-label">
-                    <p class="letra">Nombre</p>
-                    <input type="text" class="from-control fondoi" id="Nombre" autocomplete="off">
-                    <p class="letra">Localidad</p>
-                    <input type="text" class="from-control fondoi" id="Localidad" autocomplete="off">
-                    <p class="letra">club</p>
-                    <input type="text" class="from-control fondoi" id="Club" autocomplete="off">
-                    <p class="letra">Puntos</p>
-                    <input type="Enum" class="from-control fondoi" id="Nombre" autocomplete="off">
-                </div>
-                <div class="modal-footer">
+                    <input name="ClubId" type="hidden" id="ClubId" value="0" class="letra">
+                    <div class="control-label">
+                        <p class="letra">Nombre</p>
+                        <input type="text" class="form-control fondoi" id="Nombre" autocomplete="off">
+                        <p class="letra">Localidad</p>
+                        <input type="text" class="form-control fondoi" id="Localidad" autocomplete="off">
+                        <p class="letra">Club</p>
+                        <input type="text" class="form-control fondoi" id="Club" autocomplete="off">
+                        <p>puntos</p>
+                        <input type="number" class="form-control fondoi" id="Puntos" autocomplete="off">
+                    </div>
+                    <div class="modal-footer">
                     <button type="button" class="button-8" role="button" data-bs-dismiss="modal">Cerrar</button>
                     <button type="button" onclick="GuardarRanking()" class="button-87" role="button">Guardar</button>
                 </div>
             </div>
+                </div>
         </div>
-    </div>
 </div>
 <h1 class="display-4 titulo bajar" style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Posiciones</h1>
 <div>
