--- a/Views/Usuario/IndexAdmi.cshtml
+++ b/Views/Usuario/IndexAdmi.cshtml
@@ -1,4 +1,4 @@
-@model TesisPadel.Models.Usuario;
+@* @model TesisPadel.Models.Usuario;
 @{
     ViewData["Title"] ="Jugadores";
 }
@@ -20,4 +20,4 @@
 </div>
 @section Scripts{
     <script src="~/js/usuario-1.0.0.js"></script>
-}
+} *@
