--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -54,7 +54,7 @@
 <button style="margin-left: 44%;" type="button" onclick="GuardarUsuario()" class="button-87"
     role="button">Guardar</button>
 </div>
-@* <div>
+<div>
     <table class="table table-dark table-bordered table-striped">
         <thead>
             <tr>
@@ -69,7 +69,7 @@
         </thead>
         <tbody id="tbody-usuario"></tbody>
     </table>
-</div> *@
+</div>
 @section Scripts{
     <script src="~/js/usuario-1.0.0.js"></script>
 }
