--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -44,7 +44,8 @@
                           autocomplete="off">
                         <i class="input-icon uil uil-lock-alt"></i>
                       </div>
-                      <a href="#" class="btn mt-4" role="button" onclick="Iniciarsesion()">Iniciar sesión</a>
+                     
+                      <a href="#" class="btn mt-4" onclick="IniciarSesion()" role="button">Iniciar sesiónn</a>
                       <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Olvide mi contraseña</a></p>
                     </div>
                   </div>
@@ -56,16 +57,16 @@
                     <div class="section text-center">
                       <h4 class="mb-4 pb-3">Registrarse</h4>
                       <div class="form-group">
-                        <input type="email" name="logemail" class="form-style" placeholder="E-mail" id="regemail"
+                        <input type="email" name="regemail" class="form-style" placeholder="E-mail" id="regemail"
                           autocomplete="off">
                         <i class="input-icon uil uil-at"></i>
                         <div class="form-group mt-2">
-                          <input type="password" name="logpass" class="form-style" placeholder="Contraseña" id="regpass"
+                          <input type="password" name="regpass" class="form-style" placeholder="Contraseña" id="regpass"
                             autocomplete="off">
                           <i class="input-icon uil uil-lock-alt"></i>
                         </div>
                         <div class="form-group mt-2">
-                          <input type="password" name="logpass" class="form-style" placeholder="Repetir Contraseña"
+                          <input type="password" name="regrtpass" class="form-style" placeholder="Repetir Contraseña"
                             id="regrtpass" autocomplete="off">
                           <i class="input-icon uil uil-lock-alt"></i>
                         </div>
